# llm-openai-plugin

./: README.md  llm_openai.py  pyproject.toml
tests/: test_openai.py
tests/__snapshots__/: test_openai.ambr
tests/cassettes/test_openai/: test_chained_response_stored_correctly.yaml  test_conversation_chaining.yaml  test_conversation_chaining_with_store_false.yaml
